scripts/nullaway/annotator/url088e9d87be_jpush_jpush_java_library_tgz-pJ8-cn_jpush_example_JPushClientExampleJ8.txt
../annotator/url088e9d87be_jpush_jpush_java_library_tgz-pJ8-cn_jpush_example_JPushClientExampleJ8/src/cn/jpush/api/MessageParams.java:137: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return this.receiverType;
		^
    (see http://t.uber.com/nullaway )
../annotator/url088e9d87be_jpush_jpush_java_library_tgz-pJ8-cn_jpush_example_JPushClientExampleJ8/src/cn/jpush/api/CharacterTests.java:16: error: [NullAway] assigning @Nullable expression to @NonNull field
	private  JPushClient jpush = null;
	                     ^
    (see http://t.uber.com/nullaway )
../annotator/url088e9d87be_jpush_jpush_java_library_tgz-pJ8-cn_jpush_example_JPushClientExampleJ8/src/cn/jpush/api/JPushClient.java:293: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return sendMessage(p);
		^
    (see http://t.uber.com/nullaway )
../annotator/url088e9d87be_jpush_jpush_java_library_tgz-pJ8-cn_jpush_example_JPushClientExampleJ8/src/cn/jpush/api/HttpPostClient.java:59: error: [NullAway] dereferenced expression data is @Nullable
			conn.setRequestProperty("Content-Length", String.valueOf(data.length));
			                                                             ^
    (see http://t.uber.com/nullaway )
../annotator/url088e9d87be_jpush_jpush_java_library_tgz-pJ8-cn_jpush_example_JPushClientExampleJ8/src/cn/jpush/api/FunctionTests.java:16: error: [NullAway] assigning @Nullable expression to @NonNull field
	private  JPushClient jpush = null;
	                     ^
    (see http://t.uber.com/nullaway )
../annotator/url088e9d87be_jpush_jpush_java_library_tgz-pJ8-cn_jpush_example_JPushClientExampleJ8/src/cn/jpush/api/ErrorTests.java:16: error: [NullAway] assigning @Nullable expression to @NonNull field
	private  JPushClient jpush = null;
	                     ^
    (see http://t.uber.com/nullaway )
../annotator/url088e9d87be_jpush_jpush_java_library_tgz-pJ8-cn_jpush_example_JPushClientExampleJ8/src/cn/jpush/example/JPushClientExample.java:78: error: [NullAway] dereferenced expression jpush is @Nullable
		MessageResult msgResult = jpush.sendCustomMessageWithAppKey(sendNo,msgTitle, msgContent);
		                               ^
    (see http://t.uber.com/nullaway )
Note: ../annotator/url088e9d87be_jpush_jpush_java_library_tgz-pJ8-cn_jpush_example_JPushClientExampleJ8/src/cn/jpush/api/FunctionTests.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
7 errors
